tests/baselines/reference/collisionExportsRequireAndAmbientFunction.errors.txt
collisionExportsRequireAndAmbientFunction.ts(5,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndAmbientFunction.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionExportsRequireAndAmbientFunction.ts (2 errors) ====
    export declare function exports(): number;
    
    export declare function require(): string[];
        
    declare module m1 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function exports(): string;
        function require(): number;
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export declare function exports(): string;
        export declare function require(): string[];
        var a = 10;
    }